--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Torus App</title>
   </head>
   <body style="margin: 0;">
-    <script type="module" src="index.ts"></script>
+    <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
